--- a/app/view/invoice/show.html
+++ b/app/view/invoice/show.html
@@ -42,8 +42,10 @@
         </div>
       </div>
 
+      <!-- Deus tá vendo JOVEM ;\ -->
       <br>
 
+      <!-- Ticket's List-->
       <div class="row">
         <div class="col-md-8">
           <div class="panel panel-primary">
