--- a/app/components/invoice/invoice.html
+++ b/app/components/invoice/invoice.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="page-header">
-    <h1>Fatura {{competencia}}<h1>
+    <h1>Fatura {{competencia}} ({{status}})<h1>
   </div>
 
   <!-- Add Tickets-->
@@ -66,7 +66,7 @@
         </div>
         <div class="panel-body" ng-repeat="partner in partners">
             <div class="col-md-4">
-              {{partner.name}} - {{partner.amount | currency:'R$'}}
+              {{partner.name}} - {{partner.outcome | currency:'R$'}} - {{partner.amount | currency:'R$'}}
             <div>
         </div>
       </div>
